--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ svg {
 }
 
 </style>
-<script src="jquery/jquery-3.3.1.min.js"></script>
+<script src="jquery-3.3.1.min.js"></script>
 </head>
 <body>
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="959px" height="593px" viewBox="none" preserveAspectRatio="xMidYMid meet" xml:space="preserve" >
