--- a/index.html
+++ b/index.html
@@ -241,16 +241,18 @@
         <circle id="1" cy="299.45001" cx="296.75003" r="0" />
         <circle id="2" cy="154.05" cx="242.35001" r="0" />
 
-        <path id="1"
+        <path id="12"
             d="m 329.55826,338.63357 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
-            class="enabled" name="FALCO Zrt." />
+            class="enabled" name="CETRIS Hranice" />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="338.71191" cx="327.35464" id="8-8-18"
+            onmouseover="" ry="0.89049685" rx="0.91832489" cy="338.71191" cx="327.35464" id="8-8-392"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
-        <path id="2"
+        
+
+        <path id="13"
             d="m 334.22101,324.24647 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
@@ -258,6 +260,9 @@
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
             onmouseover="" ry="0.89049685" rx="0.91832489" cy="324.32483" cx="332.01736" id="8-8-36"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
+
+            
+
 
         <path id="3"
             d="m 339.58522,303.69739 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
@@ -412,7 +417,7 @@
 
     <script>
         // 1
-var oneIcon = document.getElementById("1");
+var oneIcon = document.getElementById("12");
         var onePopup = document.getElementById("one-popup");
         var hungaryCountry = document.getElementById("HU");
 
@@ -434,7 +439,7 @@ var oneIcon = document.getElementById("1");
 
 
 // 2
-var twoIcon = document.getElementById("2");
+var twoIcon = document.getElementById("13");
         var twoPopup = document.getElementById("two-popup");
         var slovakiaCountry = document.getElementById("SK");
 
@@ -450,7 +455,7 @@ var twoIcon = document.getElementById("2");
         }
 
         function hideTwoPopup(evt) {
-            fivePopup.style.display = "none";
+            twoPopup.style.display = "none";
             slovakiaCountry.style.fill = "#f4cb42";
         }
 
