--- a/index.html
+++ b/index.html
@@ -242,106 +242,106 @@
         <circle id="2" cy="154.05" cx="242.35001" r="0" />
 
         <path id="12"
-            d="m 329.55826,338.63357 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 335.65291,332.05251 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="CETRIS Hranice" />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="338.71191" cx="327.35464" id="8-8-392"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="332.30219" cx="328.79147" id="8-8-392"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         
 
         <path id="13"
-            d="m 334.22101,324.24647 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 339.64751,313.87848 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 L 338.45,317.95 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="Stavebniny DEK s.r.o." city="Szombathely" />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="324.32483" cx="332.01736" id="8-8-36"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="314.12814" cx="332.78607" id="8-8-36"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
             
 
 
         <path id="3"
-            d="m 339.58522,303.69739 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 334.41423,295.49674 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="CETRIS Hranice" />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="303.77573" cx="337.38159" id="8-8-392"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="295.74643" cx="327.55276" id="8-8-392"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         <path id="4"
-            d="m 289.8218,288.59506 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 294.7912,280.59677 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="UNION LESNÍ BRÁNA, a.s." />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="288.6734" cx="287.61816" id="8-8-1"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="280.84644" cx="287.92978" id="8-8-1"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         <path id="5"
-            d="m 344.13793,303.65612 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 348.51364,295.61345 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="VELOX-WERK s.r.o." />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="303.7345" cx="341.93427" id="8-8-7"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="295.8631" cx="341.65222" id="8-8-7"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         <path id="6"
-            d="m 493.80298,239.15271 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 498.68351,231.11175 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="CSP BZS" />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="239.23106" cx="491.59933" id="8-8-5"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="231.3614" cx="491.82208" id="8-8-5"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         <path id="7"
-            d="m 250.48421,285.22523 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 253.65249,277.32153 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="Salzag SLG " />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="285.30356" cx="248.28058" id="8-8-39"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="277.5712" cx="246.79106" id="7-7"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         <path id="8"
-            d="m 363.4038,291.32079 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 372.66324,284.96051 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0" style="fill:#000000;stroke-width:0.0248534" class="enabled"
             name="Sieć Budowlana.pl Sp. z o.o." />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="291.39914" cx="361.20016" id="8-8"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="285.21021" cx="365.80185" id="8-8"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         <path id="9"
-            d="m 354.60502,287.81106 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 359.11321,279.31193 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="ARSANIT" />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="287.8894" cx="352.4014" id="8-8-8"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="279.56158" cx="352.2518" id="8-8-8"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         <path id="10"
-            d="m 349.79098,287.48095 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 344.85997,277.97805 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="PIONART" />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="287.5593" cx="347.58734" id="8-8-3"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="278.22769" cx="337.99854" id="8-8-3"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
         <path id="11"
-            d="m 370.46973,274.83679 c 0,-1.19296 -0.96928,-2.16224 -2.16225,-2.16224 -1.19296,0 -2.16224,0.96928 -2.16224,2.16224 0,0.47222 0.14912,0.91958 0.4225,1.26753 v 0 l 1.78945,2.36107 1.73974,-2.36107 v 0 c 0.22368,-0.34795 0.3728,-0.79531 0.3728,-1.26753 z"
+            d="m 374.10942,265.34461 c 0,-3.832 -3.1135,-6.9455 -6.94554,-6.9455 -3.832,0 -6.9455,3.1135 -6.9455,6.9455 0,1.51685 0.479,2.95386 1.35714,4.07152 v 0 l 5.74804,7.58419 5.58835,-7.58419 v 0 c 0.7185,-1.11766 1.19751,-2.55467 1.19751,-4.07152 z"
             inkscape:connector-curvature="0"
             style="fill:#000000;stroke:#000000;stroke-width:0.0248534;stroke-linecap:round;stroke-linejoin:round"
             class="enabled" name="AGRO-WIKT" label="showLabel()" />
         <ellipse style="fill:#ececec;stroke:#000000;stroke-width:0.05058022;stroke-linecap:round;stroke-linejoin:round"
-            onmouseover="" ry="0.89049685" rx="0.91832489" cy="274.91513" cx="368.26608" id="8-8-34"
+            onmouseover="" ry="1.9690725" rx="2.030606" cy="265.5943" cx="367.24799" id="8-8-34"
             inkscape:label="SiećBudowlanaplSpzoo" class="enabled" />
 
 
