--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .popup {
             pointer-events: none;
             position: absolute;
-            font-size: 18px;
+            font-size: 1rem;
             text-align: center;
             background: white;
             padding: 5px;
