--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         .popup {
             pointer-events: none;
             position: absolute;
-            font-size: 1rem;
+            font-size: 2vw;
             text-align: center;
             background: white;
             padding: 5px;
             z-index: 5;
-            height: 100px;
-            line-height: 10px;
-            margin: 0 auto;
+            height: 7%;
+            line-height: 5px;
+            margin: 0;
             color: #21669e;
             border-radius: 5px;
             box-shadow: 0 0 0 1px #eee;
@@ -33,7 +33,7 @@
         }
         svg {
             /* max-width: 100% !important; */
-            width: 140%;
+            width: 150%;
             height: auto;
             display: block;
         }
@@ -418,7 +418,7 @@ var oneIcon = document.getElementById("12");
         function showOnePopup(evt) {
             var iconPos = oneIcon.getBoundingClientRect();
             onePopup.style.left = (evt.pageX) + "px";
-            onePopup.style.top = (evt.pageY - 130) + "px";
+            onePopup.style.top = (evt.pageY - 100) + "px";
             onePopup.style.display = "block";
             hungaryCountry.style.fill = "#CC2929";
         }
@@ -435,7 +435,7 @@ var twoIcon = document.getElementById("13");
         function showTwoPopup(evt) {
             var iconPos = twoIcon.getBoundingClientRect();
             twoPopup.style.left = (evt.pageX) + "px";
-            twoPopup.style.top = (evt.pageY - 130) + "px";
+            twoPopup.style.top = (evt.pageY - 100) + "px";
             twoPopup.style.display = "block";
             slovakiaCountry.style.fill = "#CC2929";
         }
@@ -452,7 +452,7 @@ var threeIcon = document.getElementById("3");
         function showThreePopup(evt) {
             var iconPos = sixIcon.getBoundingClientRect();
             threePopup.style.left = (evt.pageX) + "px";
-            threePopup.style.top = (evt.pageY - 130) + "px";
+            threePopup.style.top = (evt.pageY - 100) + "px";
             threePopup.style.display = "block";
             czechCountry.style.fill = "#CC2929";
         }
@@ -468,7 +468,7 @@ var fourIcon = document.getElementById("4");
         function showFourPopup(evt) {
             var iconPos = sixIcon.getBoundingClientRect();
             fourPopup.style.left = (evt.pageX) + "px";
-            fourPopup.style.top = (evt.pageY - 130) + "px";
+            fourPopup.style.top = (evt.pageY - 100) + "px";
             fourPopup.style.display = "block";
             czechCountry.style.fill = "#CC2929";
         }
@@ -484,7 +484,7 @@ var fiveIcon = document.getElementById("5");
         function showFivePopup(evt) {
             var iconPos = sixIcon.getBoundingClientRect();
             fivePopup.style.left = (evt.pageX) + "px";
-            fivePopup.style.top = (evt.pageY - 130) + "px";
+            fivePopup.style.top = (evt.pageY - 100) + "px";
             fivePopup.style.display = "block";
             czechCountry.style.fill = "#CC2929";
         }
@@ -501,7 +501,7 @@ var sixIcon = document.getElementById("6");
         function showSixPopup(evt) {
             var iconPos = sixIcon.getBoundingClientRect();
             sixPopup.style.left = (evt.pageX) + "px";
-            sixPopup.style.top = (evt.pageY - 130) + "px";
+            sixPopup.style.top = (evt.pageY - 100) + "px";
             sixPopup.style.display = "block";
             belarusCountry.style.fill = "#CC2929";
         }
@@ -518,7 +518,7 @@ var sixIcon = document.getElementById("6");
         function showSeventhPopup(evt) {
             var iconPos = sevenIcon.getBoundingClientRect();
             sevenPopup.style.left = (evt.pageX) + "px";
-            sevenPopup.style.top = (evt.pageY - 130) + "px";
+            sevenPopup.style.top = (evt.pageY - 100) + "px";
             sevenPopup.style.display = "block";
             germanyCountry.style.fill = "#CC2929";
         }
@@ -535,7 +535,7 @@ var sixIcon = document.getElementById("6");
         function showEightPopup(evt) {
             var iconPos = eightIcon.getBoundingClientRect();
             eightPopup.style.left = (evt.pageX) + "px";
-            eightPopup.style.top = (evt.pageY - 130) + "px";
+            eightPopup.style.top = (evt.pageY - 100) + "px";
             eightPopup.style.display = "block";
             polandCountry.style.fill = "#CC2929";
         }
@@ -551,7 +551,7 @@ var sixIcon = document.getElementById("6");
         function showNinePopup(evt) {
             var iconPos = nineIcon.getBoundingClientRect();
             ninePopup.style.left = (evt.pageX) + "px";
-            ninePopup.style.top = (evt.pageY - 130) + "px";
+            ninePopup.style.top = (evt.pageY - 100) + "px";
             ninePopup.style.display = "block";
             polandCountry.style.fill = "#CC2929";
         }
@@ -567,7 +567,7 @@ var sixIcon = document.getElementById("6");
         function showTenPopup(evt) {
             var iconPos = tenIcon.getBoundingClientRect();
             tenPopup.style.left = (evt.pageX) + "px";
-            tenPopup.style.top = (evt.pageY - 130) + "px";
+            tenPopup.style.top = (evt.pageY - 100) + "px";
             tenPopup.style.display = "block";
             polandCountry.style.fill = "#CC2929";
         }
@@ -583,7 +583,7 @@ var sixIcon = document.getElementById("6");
         function showElevenPopup(evt) {
             var iconPos = elevenIcon.getBoundingClientRect();
             elevenPopup.style.left = (evt.pageX) + "px";
-            elevenPopup.style.top = (evt.pageY - 130) + "px";
+            elevenPopup.style.top = (evt.pageY - 100) + "px";
             elevenPopup.style.display = "block";
             polandCountry.style.fill = "#CC2929";
         }
